#
# Copyright (C) 2002 - 2018 Brailcom, o.p.s.
#
# This is free software; you can redistribute it and/or modify it
# under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2, or (at your option)
# any later version.
#
# This software is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

## Process this file with automake to produce Makefile.in

nobase_localedata_DATA = \
	base/font-variants.dic \
	base/symbols.dic \
	\
	af/emojis.dic \
	am/emojis.dic \
	ar/emojis.dic \
	ar_SA/emojis.dic \
	as/emojis.dic \
	ast/emojis.dic \
	az/emojis.dic \
	be/emojis.dic \
	bg/emojis.dic \
	bn/emojis.dic \
	br/emojis.dic \
	bs/emojis.dic \
	ca/emojis.dic \
	ccp/emojis.dic \
	ceb/emojis.dic \
	chr/emojis.dic \
	ckb/emojis.dic \
	cs/emojis.dic \
	cy/emojis.dic \
	da/emojis.dic \
	de/emojis.dic \
	de_CH/emojis.dic \
	doi/emojis.dic \
	el/emojis.dic \
	en/emojis.dic \
	en_AU/emojis.dic \
	en_CA/emojis.dic \
	en_GB/emojis.dic \
	en_IN/emojis.dic \
	es/emojis.dic \
	es_419/emojis.dic \
	es_MX/emojis.dic \
	es_US/emojis.dic \
	et/emojis.dic \
	eu/emojis.dic \
	fa/emojis.dic \
	fi/emojis.dic \
	fil/emojis.dic \
	fo/emojis.dic \
	fr/emojis.dic \
	fr_CA/emojis.dic \
	ga/emojis.dic \
	gd/emojis.dic \
	gl/emojis.dic \
	gu/emojis.dic \
	ha/emojis.dic \
	he/emojis.dic \
	hi/emojis.dic \
	hr/emojis.dic \
	hu/emojis.dic \
	hy/emojis.dic \
	ia/emojis.dic \
	id/emojis.dic \
	ig/emojis.dic \
	is/emojis.dic \
	it/emojis.dic \
	ja/emojis.dic \
	jv/emojis.dic \
	ka/emojis.dic \
	kab/emojis.dic \
	kk/emojis.dic \
	kl/emojis.dic \
	km/emojis.dic \
	kn/emojis.dic \
	ko/emojis.dic \
	kok/emojis.dic \
	ku/emojis.dic \
	ky/emojis.dic \
	lb/emojis.dic \
	lo/emojis.dic \
	lt/emojis.dic \
	lv/emojis.dic \
	mi/emojis.dic \
	mk/emojis.dic \
	ml/emojis.dic \
	mn/emojis.dic \
	mni/emojis.dic \
	mr/emojis.dic \
	ms/emojis.dic \
	mt/emojis.dic \
	my/emojis.dic \
	nb/emojis.dic \
	ne/emojis.dic \
	nl/emojis.dic \
	nn/emojis.dic \
	no/emojis.dic \
	or/emojis.dic \
	pa/emojis.dic \
	pa_Arab/emojis.dic \
	pcm/emojis.dic \
	pl/emojis.dic \
	ps/emojis.dic \
	pt/emojis.dic \
	pt_PT/emojis.dic \
	qu/emojis.dic \
	rm/emojis.dic \
	ro/emojis.dic \
	ru/emojis.dic \
	rw/emojis.dic \
	sa/emojis.dic \
	sd/emojis.dic \
	si/emojis.dic \
	sk/emojis.dic \
	sl/emojis.dic \
	so/emojis.dic \
	sq/emojis.dic \
	sr/emojis.dic \
	sr_BA/emojis.dic \
	sv/emojis.dic \
	sw/emojis.dic \
	sw_KE/emojis.dic \
	ta/emojis.dic \
	te/emojis.dic \
	tg/emojis.dic \
	th/emojis.dic \
	ti/emojis.dic \
	tk/emojis.dic \
	to/emojis.dic \
	tr/emojis.dic \
	ug/emojis.dic \
	uk/emojis.dic \
	ur/emojis.dic \
	uz/emojis.dic \
	vi/emojis.dic \
	wo/emojis.dic \
	xh/emojis.dic \
	yo/emojis.dic \
	yo_BJ/emojis.dic \
	yue/emojis.dic \
	zh/emojis.dic \
	zh_HK/emojis.dic \
	zh_TW/emojis.dic \
	zu/emojis.dic \
	\
	an/orca.dic \
	ar/orca.dic \
	ast/orca.dic \
	base/orca.dic \
	be/orca.dic \
	bg/orca.dic \
	bn_IN/orca.dic \
	bn/orca.dic \
	bs/orca.dic \
	ca/orca.dic \
	ca@valencia/orca.dic \
	cs/orca.dic \
	da/orca.dic \
	de/orca.dic \
	el/orca.dic \
	es/orca.dic \
	eu/orca.dic \
	fr/orca.dic \
	fur/orca.dic \
	gl/orca.dic \
	hi/orca.dic \
	hr/orca.dic \
	hu/orca.dic \
	id/orca.dic \
	it/orca.dic \
	lt/orca.dic \
	lv/orca.dic \
	ml/orca.dic \
	nb/orca.dic \
	ne/orca.dic \
	nl/orca.dic \
	oc/orca.dic \
	pa/orca.dic \
	pl/orca.dic \
	pt_BR/orca.dic \
	pt/orca.dic \
	ro/orca.dic \
	ru/orca.dic \
	sk/orca.dic \
	sr@latin/orca.dic \
	sr/orca.dic \
	sv/orca.dic \
	te/orca.dic \
	tg/orca.dic \
	th/orca.dic \
	tr/orca.dic \
	ug/orca.dic \
	uk/orca.dic \
	vi/orca.dic \
	\
	an/orca-chars.dic \
	ar/orca-chars.dic \
	ast/orca-chars.dic \
	base/orca-chars.dic \
	be/orca-chars.dic \
	bg/orca-chars.dic \
	bn_IN/orca-chars.dic \
	bn/orca-chars.dic \
	bs/orca-chars.dic \
	ca/orca-chars.dic \
	ca@valencia/orca-chars.dic \
	cs/orca-chars.dic \
	da/orca-chars.dic \
	de/orca-chars.dic \
	el/orca-chars.dic \
	eo/orca-chars.dic \
	es/orca-chars.dic \
	eu/orca-chars.dic \
	fi/orca-chars.dic \
	fr/orca-chars.dic \
	gl/orca-chars.dic \
	hi/orca-chars.dic \
	hr/orca-chars.dic \
	hu/orca-chars.dic \
	id/orca-chars.dic \
	it/orca-chars.dic \
	lt/orca-chars.dic \
	lv/orca-chars.dic \
	mk/orca-chars.dic \
	ml/orca-chars.dic \
	ms/orca-chars.dic \
	nb/orca-chars.dic \
	ne/orca-chars.dic \
	nl/orca-chars.dic \
	nn/orca-chars.dic \
	oc/orca-chars.dic \
	pa/orca-chars.dic \
	pl/orca-chars.dic \
	pt_BR/orca-chars.dic \
	pt/orca-chars.dic \
	ro/orca-chars.dic \
	ru/orca-chars.dic \
	sk/orca-chars.dic \
	sl/orca-chars.dic \
	sq/orca-chars.dic \
	sr@latin/orca-chars.dic \
	sr/orca-chars.dic \
	sv/orca-chars.dic \
	ta/orca-chars.dic \
	te/orca-chars.dic \
	tg/orca-chars.dic \
	th/orca-chars.dic \
	tr/orca-chars.dic \
	ug/orca-chars.dic \
	uk/orca-chars.dic \
	vi/orca-chars.dic \
	zh_CN/orca-chars.dic \
	zh_HK/orca-chars.dic \
	zh_TW/orca-chars.dic \
	\
	an/symbols.dic \
	ar/symbols.dic \
	bg/symbols.dic \
	ca/symbols.dic \
	ckb/symbols.dic \
	cs/symbols.dic \
	da/symbols.dic \
	de/symbols.dic \
	de_CH/symbols.dic \
	el/symbols.dic \
	en/symbols.dic \
	es/symbols.dic \
	es_CO/symbols.dic \
	fa/symbols.dic \
	fi/symbols.dic \
	fr/symbols.dic \
	ga/symbols.dic \
	gl/symbols.dic \
	he/symbols.dic \
	hi/symbols.dic \
	hr/symbols.dic \
	hu/symbols.dic \
	is/symbols.dic \
	it/symbols.dic \
	ja/symbols.dic \
	ka/symbols.dic \
	kmr/symbols.dic \
	kn/symbols.dic \
	ko/symbols.dic \
	ky/symbols.dic \
	lt/symbols.dic \
	mk/symbols.dic \
	mn/symbols.dic \
	my/symbols.dic \
	nb_NO/symbols.dic \
	nl/symbols.dic \
	nn_NO/symbols.dic \
	pa/symbols.dic \
	pl/symbols.dic \
	pt_BR/symbols.dic \
	pt_PT/symbols.dic \
	ro/symbols.dic \
	ru/symbols.dic \
	sk/symbols.dic \
	sl/symbols.dic \
	so/symbols.dic \
	sq/symbols.dic \
	sr/symbols.dic \
	sv/symbols.dic \
	ta/symbols.dic \
	tr/symbols.dic \
	uk/symbols.dic \
	vi/symbols.dic \
	zh/symbols.dic \
	zh_CN/symbols.dic \
	zh_HK/symbols.dic \
	zh_TW/symbols.dic

nobase_localedata_DATA += \
	de/gender-neutral.dic \
	es/gender-neutral.dic \
	fr/gender-neutral.dic

EXTRA_DIST = ${nobase_localedata_DATA}

# List of latin American Spanish languages
ES_419_CLDR = \
	es_AR \
	es_BO \
	es_CL \
	es_CO \
	es_CR \
	es_CU \
	es_DO \
	es_EC \
	es_GT \
	es_HN \
	es_NI \
	es_PA \
	es_PE \
	es_PR \
	es_PY \
	es_SV \
	es_UY \
	es_VE

import-symbols:
	./import-symbols.py
	./import-orca
	./import-orca -chars

install-data-hook:
	for lang419 in $(ES_419_CLDR) ; do \
		$(MKDIR_P) "$(DESTDIR)$(localedatadir)/$$lang419" ;\
		$(LN_S) "../es_419/emojis.dic" "$(DESTDIR)$(localedatadir)/$$lang419/emojis.dic" || true ;\
	done

uninstall-hook:
	for lang419 in $(ES_419_CLDR) ; do \
		rm "$(DESTDIR)$(localedatadir)/$$lang419/emojis.dic" ;\
	done

-include $(top_srcdir)/git.mk
GITIGNOREFILES = symbolsrc
