## Process this file with automake to produce Makefile.in

dist_moduleconf_DATA = cicero.conf espeak.conf festival.conf flite.conf \
                       ibmtts.conf ivona.conf dtk-generic.conf \
                       epos-generic.conf espeak-generic.conf \
                       espeak-mbrola-generic.conf llia_phon-generic.conf \
                       swift-generic.conf

dist_moduleconforig_DATA = cicero.conf espeak.conf festival.conf flite.conf \
                           ibmtts.conf ivona.conf dtk-generic.conf \
                           epos-generic.conf espeak-generic.conf \
                           espeak-mbrola-generic.conf llia_phon-generic.conf \
                           swift-generic.conf
